--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+<main>
+<head>
+  <meta charset="UTF-8">
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    Hello World
-    <script  src="js/index.js"></script>
-  </body>
+<body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <header id="header">
+    <img id="header-img" src="https://cdn.vectorstock.com/i/1000x1000/96/67/shoes-company-logo-design-template-vector-30219667.webp" alt="" />
+    <nav id="nav-bar"> </nav>
+  </header>
+  <script src="js/index.js"></script>
+</body>
+</main>
 </html>
+<!-- <a href="/#" class="nav-link">Features</a>
+        <a href="/#" class="nav-link">How it works</a>
+        <a href="/#" class="nav-links">Pricing</a> -->
