--- a/index.html
+++ b/index.html
@@ -11,12 +11,34 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <header id="header">
     <img id="header-img" src="https://cdn.vectorstock.com/i/1000x1000/96/67/shoes-company-logo-design-template-vector-30219667.webp" alt="" />
-    <nav id="nav-bar"> </nav>
+    <nav id="nav-bar"> 
+      <a href="#features" class="nav-link">Features</a>
+      <a href="#hiw" class="nav-link">How it works</a>
+      <a href="#pricing" class="nav-link">Pricing</a>
+    </nav>
   </header>
   <script src="js/index.js"></script>
+  <h2 id="features">Features</h2><br>
+  <h2 id="hiw">How it works</h2><br>
+  <h2 id="pricing">Pricing</h2><br>
+  <iframe width="350" height="250" id="video" src="https://www.youtube.com/embed/y881t8ilMyc" frameborder="0"></iframe>
+  <form id="form">
+    <input id="email">
+
+  </form>
+  
+
+
+
+
+
+
 </body>
 </main>
 </html>
-<!-- <a href="/#" class="nav-link">Features</a>
-        <a href="/#" class="nav-link">How it works</a>
-        <a href="/#" class="nav-links">Pricing</a> -->
+
+
+
+
+
+
