--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
   <header id="header">
     <img id="header-img" src="https://cdn.vectorstock.com/i/1000x1000/96/67/shoes-company-logo-design-template-vector-30219667.webp" alt="" />
     <nav id="nav-bar"> 
@@ -17,22 +18,33 @@
       <a href="#pricing" class="nav-link">Pricing</a>
     </nav>
   </header>
-  <script src="js/index.js"></script>
-  <h2 id="features">Features</h2><br>
-  <h2 id="hiw">How it works</h2><br>
-  <h2 id="pricing">Pricing</h2><br>
-  <iframe width="350" height="250" id="video" src="https://www.youtube.com/embed/y881t8ilMyc" frameborder="0"></iframe>
-  <form id="form">
-    <input id="email">
+<section class="section">
+  <h2>Dario Quin shoe store</h2>
+
+  <form id="form" action="https://www.freecodecamp.com/email-submit">
+    <input id="email" placeholder="Enter your email" type="email" name="email">
+    <button id="submit" placeholder="Submit" type="submit" name="submit">Getting Started</button>
 
   </form>
+
+  <span>
+  <h2 id="features">Features</h2><br>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus odio quaerat quos! Voluptas, dicta quae architecto cumque assumenda modi temporibus dolor tenetur. Asperiores vero dicta officiis quidem consectetur accusamus eius? Soluta similique blanditiis dolor doloremque doloribus? Aliquam quasi ad illo!
+  </span>
+  <div>
+    <h2 id="hiw">How it works</h2>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos ratione iste vero voluptatem odio possimus commodi culpa autem quisquam voluptatum. Ullam, rerum delectus exercitationem quas provident corporis architecto veniam amet voluptates rem fugiat a aspernatur iusto animi sapiente ut sequi consequatur alias commodi ducimus cupiditate! Inventore, culpa aliquid quo fuga illo adipisci perferendis enim sed eaque accusantium incidunt magnam reiciendis deleniti magni unde saepe quas! Eaque architecto autem necessitatibus!
+  </div>
+  <div>
+    <h2 id="pricing">Pricing</h2>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo nihil atque blanditiis harum quis placeat dicta quisquam, sapiente ut laboriosam fugit. Maxime fugit quae culpa porro voluptatibus rerum beatae sunt.
+  </div>
   
-
-
-
-
-
-
+  <div class="video">
+  <iframe width="500" height="350" id="video" src="https://www.youtube.com/embed/y881t8ilMyc" frameborder="0"></iframe>
+  </div>
+</section>
+  <script src="js/index.js"></script>
 </body>
 </main>
 </html>
